# tokenlens

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: transcript-format.md
tests/: test_parser.py
tests/fixtures/: sample_session.jsonl
tokenlens/: cli.py  pricing.py  pricing.toml  report.py  transcripts.py  ui.py  waste.py
